--- a/css/style.css
+++ b/css/style.css
@@ -568,7 +568,7 @@ footer{
   margin-top: 10px;
 }
 .footer-links ul li a{
-  color: #000000;
+  color: #ffffff;
   opacity: 0.5;
   margin: 4px 0;
   font-size: 0.9rem;
