--- a/css/style.css
+++ b/css/style.css
@@ -534,7 +534,7 @@ footer{
   align-items: center;
 }
 .footer-logo a{
-  color: #ffffff;
+  color: #000000;
   font-size: 1.4rem;
   font-weight: 600;
   letter-spacing: 1px;
