--- a/css/style.css
+++ b/css/style.css
@@ -142,7 +142,7 @@ body{
   color: #202020;
 }
 .search-banner-text strong{
-  color: #4eb060;
+  color: #202020;
   font-size: 1.4rem;
   margin-top: 4px;
 }
