--- a/css/Details For Checkout CSS.css
+++ b/css/Details For Checkout CSS.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
 
 * {
-    margin:0;
+    margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
@@ -15,12 +15,12 @@ body{
 }
 
 .contact-in{
-    width: 80%;
+    width: 50%;
     height: auto;
     margin: auto;
-    display: flex;
+    display: center;
     flex-wrap: wrap;
-    padding: 10px;
+    padding: 20px;
     border-radius: 20px;
     background: #fff;
     box-shadow: 0px 0px 0px 0px;
